Enhance POS system with security, navigation, and UX
- Improved Login Form with password hashing (PBKDF2) and
  auto-migration of plain text passwords.
- Redesigned Main Form with modern UI and emoji icons.
- Added navigation bars for seamless module switching.
- Introduced initial stock functionality in Maintenance Form.
- Enhanced Inventory Monitoring with color-coded stock warnings.
- Improved POS Form with receipt ID auto-generation and
  transaction-based inventory updates.
- Added Backup & Restore module with activity logging.
- Centralized navigation logic in NavigationHelper for consistency.
- Created `database_setup.sql` and `password_migration.sql` for
  schema setup and password migration.
- Updated documentation with guides, summaries, and testing plans.
- Ensured code quality with proper form disposal and error handling.

--- a/POS.csproj
+++ b/POS.csproj
@@ -124,7 +124,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BackupRestoreForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BackupRestoreForm.Designer.cs">
+      <DependentUpon>BackupRestoreForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="DatabaseHelper.cs" />
+    <Compile Include="DeliveryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DeliveryForm.Designer.cs">
+      <DependentUpon>DeliveryForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="InventoryMonitoringForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="InventoryMonitoringForm.Designer.cs">
+      <DependentUpon>InventoryMonitoringForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -143,6 +161,14 @@
     <Compile Include="MaintenanceForm.Designer.cs">
       <DependentUpon>MaintenanceForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="NavigationHelper.cs" />
+    <Compile Include="NavigationPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="NavigationPanel.Designer.cs">
+      <DependentUpon>NavigationPanel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PasswordHelper.cs" />
     <Compile Include="POSForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -151,6 +177,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SalesMonitoringForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SalesMonitoringForm.Designer.cs">
+      <DependentUpon>SalesMonitoringForm.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -173,7 +205,17 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="DOES_IT_FOLLOW_SETUP.md" />
+    <None Include="FEATURE_INITIAL_STOCK.md" />
+    <None Include="FIXES_SUMMARY.md" />
+    <None Include="IMPLEMENTATION_SUMMARY.md" />
+    <None Include="IMPROVEMENTS_SUMMARY.md" />
+    <None Include="NAVIGATION_COMPLETE.md" />
+    <None Include="NAVIGATION_ENHANCEMENT_GUIDE.md" />
+    <None Include="NAVIGATION_FLOW.md" />
+    <None Include="NAVIGATION_IMPLEMENTATION_STATUS.md" />
     <None Include="packages.config" />
+    <None Include="PROJECT_STATUS_REPORT.md" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -183,11 +225,16 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="README_IMPROVEMENTS.md" />
+    <None Include="SECURITY_NAVIGATION_IMPROVEMENTS.md" />
+    <None Include="TESTING_GUIDE.md" />
+    <None Include="VERIFICATION_COMPLETE.md" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="QUICK_START.md" />
     <None Include="Resources\GASTOS APP.png" />
   </ItemGroup>
   <ItemGroup>
@@ -198,6 +245,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="IMAGES\user.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="database_setup.sql" />
+    <Content Include="password_migration.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
